--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 D_1000.pth filter=lfs diff=lfs merge=lfs -text
 G_1000.pth filter=lfs diff=lfs merge=lfs -text
+D_2000.pth filter=lfs diff=lfs merge=lfs -text
